Adjusted figures to differentiate between commited funds and spend and tweaked css to stop clipping of figures

--- a/reports/2015/css/_fellow-spend.scss
+++ b/reports/2015/css/_fellow-spend.scss
@@ -6,92 +6,92 @@
 	overflow: hidden;
 	margin-top: 40px;
 	margin-bottom: 60px;
-	
+
 	.container-fellow-spend-inner {
 	    white-space: nowrap;
 	    width: 1000px;
 	    margin: auto;
 	    position: relative;
-	    
+
 	    .fellow-spend-entry {
-		height: 450px;
+		height: 480px;
 		width: 100%;
 		margin: 25px 0;
 		display: inline-block;
 		overflow: hidden;
 		transition: all 0.5s;
 		position: relative;
-		
+
 		&.fellow-spend-entry-active {
 		    margin-left: 0;
 		}
-		
+
 		&.fellow-spend-entry-previous {
 		    margin-left: -1040px;
 		    margin-right: 40px;
 		    opacity: 0;
 		}
-		
+
 		&.fellow-spend-entry-next {
 		    margin-left: 40px;
 		    margin-right: -1040px;
 		    opacity: 0;
 		}
-		
+
 		h4 {
 		    margin-top: 0;
 		}
-		
+
 		.fellow-spend-entry-left,  .fellow-spend-entry-right {
 		    display: inline-block;
 		    width: 500px;
 		    vertical-align: top;
 		}
-		
+
 		.fellow-spend-entry-left {
 		    .fellow-spend-links {
 			margin-top: 40px;
-			
+
 			& > a {
 			    margin: 4px 0;
 			    display: inline-block;
 			    color: $black;
-			    
+
 			    &:hover {
 				color: $green;
 			    }
 			}
 		    }
 		}
-		
+
 		.fellow-spend-entry-right {
 		    text-align: right;
 		    padding-right: 5px;
-		    
+
 		    .fellow-spend-contributions {
 			font-size: 16px;
 			line-height: 24px;
 			margin-bottom: 30px;
 		    }
-		    
+
 		    .fellow-spend-item {
 			width: (125px+70px);
 			margin-left: (500px-125px-70px-30px);
 			margin-top: 10px;
 			margin-bottom: 10px;
 			text-align: left;
-			
+
 			.fellow-spend-item-amount {
 			    font-size: 20px;
 			}
 		    }
-		    
+
 		    .fellow-spend-total {
 			font-size: 20px;
 			padding: 5px 0;
 			margin-top: 10px;
 			margin-right: 30px;
-			
+
 			.fellow-spend-total-amount {
 			    display: inline-block;
 			    border-top: 2px solid $black;
@@ -105,11 +105,11 @@
 		}
 	    }
 	}
-	
+
 	$arrowsize: 50px;
 	$arrowsymbol: 15px;
 	$dotsize: 15px;
-	
+
 	.fellow-spend-arrow-left, .fellow-spend-arrow-right {
 	    display: block;
 	    width: $arrowsize;
@@ -121,13 +121,13 @@
 	    top: 50%;
 	    margin-top: (-$arrowsize / 2);
 	    cursor: pointer;
-	    
+
 	    &:hover {
 		background-color: $green;
 		border: 2px solid $green;
 	    }
 	}
-	
+
 	.fellow-spend-arrow-left {
 	    left: (-$arrowsize - 20px);
 	    &:before {
@@ -156,7 +156,7 @@
 		left: 50%;
 		top: 50%;
 	    }
-	    
+
 	    &:hover {
 		&:after {
 		    border-right: $arrowsymbol solid $green;
@@ -166,7 +166,7 @@
 		}
 	    }
 	}
-	
+
 	.fellow-spend-arrow-right {
 	    right: (-$arrowsize - 20px);
 	    &:before {
@@ -195,7 +195,7 @@
 		right: 50%;
 		top: 50%;
 	    }
-	    
+
 	    &:hover {
 		&:after {
 		    border-left: $arrowsymbol solid $green;
@@ -205,11 +205,11 @@
 		}
 	    }
 	}
-	
+
 	.fellow-spend-dots {
 	    margin: 10px auto;
 	    text-align: center;
-	    
+
 	    .fellow-spend-dot {
 		background-color: white;
 		display: inline-block;
@@ -229,12 +229,12 @@
 			z-index: 50;
 		    }
 		}
-		
+
 		&.fellow-spend-dot-active {
 		    background-color: $green;
 		    border: 2px solid $green;
 		}
-		
+
 		.fellow-spend-dot-tooltip {
 		    opacity: 0;
 		    transition: opacity 0.5s;
@@ -248,7 +248,7 @@
 		    border: 2px solid $black;
 		    border-radius: 3px;
 		    pointer-events: none;
-		    
+
 		    &:before {
 			content: '';
 			position: absolute;
@@ -261,7 +261,7 @@
 			margin-left: -5px;
 			left: 50%;
 		    }
-		    
+
 		    &:after {
 			content: '';
 			position: absolute;
@@ -274,14 +274,14 @@
 			margin-left: -5px;
 			margin-top: -2px;
 			left: 50%;
-			
+
 		    }
 		}
 	    }
 	}
-	
+
 	$chartsize: 400px;
-	
+
 	.fellow-spend-chart {
 	    position: absolute;
 	    width: $chartsize;
@@ -289,7 +289,7 @@
 	    margin-left: (-$chartsize / 2);
 	    left: 50%;
 	    top: 50px;
-	    
+
 	    .fellow-spend-chart-photo {
 		background-color: white;
 		background-position: 50% 0%;
@@ -302,7 +302,7 @@
 		bottom: 20%;
 		right: 20%;
 	    }
-	    
+
 	    svg {
 		.slice {
 		    &.slice-people > path {
@@ -329,7 +329,7 @@
 		    &.slice-legal, &.slice-office.space > path {
 			fill: #7f195e;
 		    }
-		    
+
 		    .label {
 			font-family: 'Georgia', 'Merriweather', sans-serif;
 			font-size: 6px;
